MDEV-20798 Conversion from INET6 to other types performed without errors or warnings